--- a/src/main/java/co/edu/unicauca/proyectocurso/presentation/GUIEliminarUsuario.form
+++ b/src/main/java/co/edu/unicauca/proyectocurso/presentation/GUIEliminarUsuario.form
@@ -142,8 +142,8 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="2" rowCount="4">
-                <Column editable="true" title="Username" type="java.lang.Object"/>
-                <Column editable="true" title="Rol" type="java.lang.Object"/>
+                <Column editable="false" title="Username" type="java.lang.Object"/>
+                <Column editable="false" title="Rol" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
